Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.4.0 Beta, 5.4.0
-
Fix Version/s: 5.5.0 Alpha
-
Component/s: WebEngine
-
Labels:None
-
Environment:Qt 5.4 beta
Ubuntu 14.10 64bits
-
Commits:d8d4666db2592b64b7e24aa896ecdac7e8f8bc1a
Description
When you try to load a url while not visible and then set the WebEngineView to visible it does not render the requested page on screen.
Steps to reproduce:
1 - load a url while visible
2 - set WebEngineView visible to false
3 - load another url while invisible
4 - set WebEngineView visible to true
expected: Web page shown
result: The WebEngineView is not rendered on screen
Qml file to test in attachment.