src/core/render_widget_host_view_qt.cpp
@@ -715,6 +715,16 @@ void RenderWidgetHostViewQt::notifyResize()
     m_host->WasResized();
 }
 
+void RenderWidgetHostViewQt::notifyShown()
+{
+    WasShown();
+}
+
+void RenderWidgetHostViewQt::notifyHidden()
+{
+    WasHidden();
+}
+
 void RenderWidgetHostViewQt::windowBoundsChanged()
 {
     m_host->SendScreenRects();
